fix bottom gap

--- a/src/block-components/navigation-view/editor.scss
+++ b/src/block-components/navigation-view/editor.scss
@@ -5,7 +5,7 @@
 
 .stk-navigation-view__wrapper {
 	position: fixed !important;
-	bottom: 26px;
+	bottom: 25px;
 	width: 280px !important;
 	z-index: 9;
 	background: #fafafa;
